fix info overflow

--- a/src/components/Timer.scss
+++ b/src/components/Timer.scss
@@ -35,8 +35,8 @@ div {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	margin-left: 25em;
-	margin-right: 25em;
+	margin-left: 25%;
+	margin-right: 25%;
 }
 
 .info-left {
